--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 
 html {
   font-size: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -34,13 +35,13 @@ body {
   width: 100%;
   min-height: 110vh;
   justify-content: center;
+  align-items: center;
   display: flex;
   padding: 100px 0;
 }
 
 .profile-card {
   width: 380px;
-  height: auto;
   padding: 30px;
   max-width: calc(100% - 10px);
   background: var(--gray-800);
@@ -99,14 +100,15 @@ body {
   width: 100%;
   display: block;
   text-align: center;
-  color: var(--white);
-  background: var(--gray-700);
   padding: 10px 0;
   margin-bottom: 15px;
+  color: var(--white);
+  background: var(--gray-700);
   font-size: 14px;
   font-weight: 600;
   border-radius: 10px;
   text-decoration: none;
+  transition: all 0.5s;
 }
 
 .profile-links a:hover {
